# ft_linear_regression

./: .gitignore  Cargo.toml  theta.json
src/: lib.rs  predict.rs  train.rs
