[package]
name = "ft_linear_regression"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plotters = "0.3"
plotters-cairo = "0.3"
open = "5"

[[bin]]
name = "train"
path = "src/train.rs"

[[bin]]
name = "predict"
path = "src/predict.rs"

[[bin]]
name = "eval"
path = "src/eval.rs"
